[gd_scene load_steps=8 format=3 uid="uid://bqy33rwx6p2gu"]

[ext_resource type="Theme" uid="uid://boqcldsrhupj6" path="res://default_theme.tres" id="1_0x5o3"]
[ext_resource type="Script" path="res://Scripts/pausemenu.gd" id="2_4djrw"]
[ext_resource type="PackedScene" uid="uid://dlvvc6xxkthxq" path="res://Scenes/Objects/volume.tscn" id="3_ylkwo"]
[ext_resource type="AudioStream" uid="uid://bba02f6mmvqbo" path="res://Resources/SFX/menu_button.ogg" id="4_5n300"]
[ext_resource type="AudioStream" uid="uid://yerj1h6istbe" path="res://Resources/SFX/menu_apply.ogg" id="5_1x4ol"]

[sub_resource type="Animation" id="Animation_axrf0"]
resource_name = "settings"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/BtnCont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.3, 2),
"update": 0,
"values": [Vector2(384, 128), Vector2(70, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.301961), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibg1q"]
_data = {
"settings": SubResource("Animation_axrf0")
}

[node name="pausemenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0x5o3")
script = ExtResource("2_4djrw")
menu = "res://Scenes/menu.tscn"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BtnCont" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -196.0
offset_right = -121.998
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="Continue" type="Button" parent="Panel/BtnCont"]
layout_mode = 2
text = "Continue"
metadata/_edit_lock_ = true

[node name="Settings" type="Button" parent="Panel/BtnCont"]
layout_mode = 2
text = "Settings"
metadata/_edit_lock_ = true

[node name="QuitMenu" type="Button" parent="Panel/BtnCont"]
layout_mode = 2
text = "Quit to Menu"
metadata/_edit_lock_ = true

[node name="QuitGame" type="Button" parent="Panel/BtnCont"]
layout_mode = 2
text = "Quit Game"
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 576.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VolumeCont" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 448.0

[node name="MasterLbl" type="Label" parent="Panel/Panel/VolumeCont"]
layout_mode = 2
text = "Master Volume"

[node name="Master" parent="Panel/Panel/VolumeCont" instance=ExtResource("3_ylkwo")]
layout_mode = 2
bus_name = "Master"

[node name="MusicLbl" type="Label" parent="Panel/Panel/VolumeCont"]
layout_mode = 2
text = "Music Volume"

[node name="Music" parent="Panel/Panel/VolumeCont" instance=ExtResource("3_ylkwo")]
layout_mode = 2
bus_name = "Music"

[node name="SfxLbl" type="Label" parent="Panel/Panel/VolumeCont"]
layout_mode = 2
text = "Sound Effect Volume"

[node name="Sfx" parent="Panel/Panel/VolumeCont" instance=ExtResource("3_ylkwo")]
layout_mode = 2
bus_name = "Sfx"

[node name="BtnCont" type="HBoxContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 536.0
offset_right = 512.0
offset_bottom = 576.0

[node name="Apply" type="Button" parent="Panel/Panel/BtnCont"]
layout_mode = 2
text = " Apply "

[node name="VSeparator" type="VSeparator" parent="Panel/Panel/BtnCont"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Close" type="Button" parent="Panel/Panel/BtnCont"]
layout_mode = 2
text = " Close "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ibg1q")
}

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5n300")
bus = &"Sfx"

[node name="apply" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1x4ol")
bus = &"Sfx"

[connection signal="pressed" from="Panel/BtnCont/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/BtnCont/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/BtnCont/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="Panel/BtnCont/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="Panel/Panel/BtnCont/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Panel/Panel/BtnCont/Close" to="." method="_on_close_pressed"]
